<resources>
    <string name="app_names">GoldenHand</string>

    <string name="app_name">loginGoldenHand</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_now">New User? Register Now</string>


    <string-array name="egyptgov">
        <item>Alexandria </item>
        <item>Aswan </item>
        <item>Asyut </item>
        <item>Beheira </item>
        <item>Beni Suef </item>
        <item>Cairo </item>
        <item>Dakahlia </item>
        <item>Damietta </item>
        <item>Faiyum </item>
        <item>Gharbia </item>
        <item>Giza </item>round_boorder.xml
        <item>Ismailia </item>
        <item>Kafr El Sheikh </item>
        <item>Luxor </item>
        <item>Matruh </item>
        <item>Minya </item>
        <item>Monufia </item>
        <item>New Valley </item>
        <item>North Sinai </item>
        <item>Port Said </item>
        <item>Qalyubia </item>
        <item>Qena </item>
        <item>Red Sea </item>
        <item>Sharqia </item>
        <item>Sohag </item>
        <item>South Sinai </item>
        <item>Suez </item>

    </string-array>
</resources>
